@startuml
title udo — Recursive Node Tree: Types

hide empty members
skinparam classAttributeIconSize 0

' ---------- in-memory tree ----------
class Tree {
  + root : Node   <<Container(Root)>>
  + cursor : NodePath
  --
  .. load ..
  + load() : Tree                      <<root = ~/.config/udo>>
  + load_from(root_dir) : Tree
  .. navigate ..
  + get(path) : Option<&Node>
  + get_mut(path) : Option<&mut Node>
  + find_child(parent, name) : Option<NodePath>
  + resolve(names) : Option<NodePath>
  .. change + persist ..
  + create_container(parent, name, dir, kind) : NodePath
  + create_task(parent, task) : NodePath
  + update(path, NodePatch)
  + save(path)
  + delete(path)
  + insert(parent, node) : NodePath    <<in-memory only>>
  .. view (nav.rs) ..
  + rows() : Vec<Row>          <<depth-first, skips collapsed>>
  + move_up/down/in/out()
  + collapse() / expand() / toggle_collapse()
  + collapse_all() / expand_all()
}

note top of Tree
  NodePath = Vec<usize>
  child-index path from root;
  also the TUI cursor.
end note

class "Node  <<enum>>" as Node {
  Container(Container)
  Task(Task)
  --
  + name() : &str
  + dir() : Option<&Path>
  + children() : &[Node]
  + children_mut() : Option<&mut Vec<Node>>
  + update(NodePatch)
}

class Container {
  + name : String
  + dir : PathBuf
  + kind : ContainerKind
  + settings : ContainerSettings
  + children : Vec<Node>
  + unloaded : Vec<PathBuf>
  + collapsed : bool   <<view state, not saved>>
  --
  + update(ContainerPatch)
}

class Task {
  + name : String
  + dir : Option<PathBuf>
  + status : TaskStatus
  + due_date : DateTime<Utc>
  --
  + update(TaskPatch)
}

enum ContainerKind {
  Root
  Workspace
  Project
}

enum TaskStatus {
  Pending
  Stale
  InProgress
  Finished
}

class ContainerSettings {
  + archive_dir : Option<PathBuf>
  + default_script : Option<PathBuf>
  + theme : Option<String>                          <<Root only>>
  + default_workspace : Option<(String, PathBuf)>   <<Root only>>
}

' ---------- update / patch ----------
class "NodePatch  <<enum>>" as NodePatch {
  Container(ContainerPatch)
  Task(TaskPatch)
}

class ContainerPatch {
  + name : Option<String>
  + dir : Option<PathBuf>
  + kind : Option<ContainerKind>
  + settings : Option<ContainerSettings>
}

class TaskPatch {
  + name : Option<String>
  + dir : Option<PathBuf>
  + status : Option<TaskStatus>
  + due_date : Option<DateTime<Utc>>
}

' ---------- persistence DTO ----------
class ContainerData <<serde / TOML>> {
  + name : String
  + kind : ContainerKind
  + tasks : Vec<Task>
  + children : Vec<PathBuf>   <<child dirs>>
  + settings : ContainerSettings   <<flattened>>
  --
  + load(dir) : ContainerData
  + save(dir)
}

class ViewState <<view.toml>> {
  + collapsed : Vec<PathBuf>   <<container dirs>>
  --
  + load(root_dir) : ViewState   <<missing/broken -> empty>>
  + save(root_dir)
}

note bottom of ViewState
  <root dir>/view.toml, separate from the data:
  collapsing never touches .udo.toml files.
  Keyed by dir (stable), not index path.
  Applied in load_from, saved when the TUI quits.
end note

' ---------- relationships ----------
Tree o--> Node : root
Node ..> Container
Node ..> Task
Container o--> "0..*" Node : children
Container --> ContainerKind
Container --> ContainerSettings
Task --> TaskStatus

NodePatch ..> ContainerPatch
NodePatch ..> TaskPatch
Container ..> ContainerPatch : update()
Task ..> TaskPatch : update()

Container ..> ContainerData : From<&Container>\n(.udo.toml)
ContainerData o--> "0..*" Task : tasks
Tree ..> ViewState : apply_view() / view_state()

note bottom of Node
  Only **Container** owns `children`.
  A **Task** has no children field →
  leaf-ness is guaranteed at **compile time**
  (no runtime guard needed).
end note

note right of Container
  `unloaded`: child dirs listed in the file
  but not loadable (e.g. drive unmounted).
  Runtime only, not shown in the tree —
  written back into `children` on save
  so they stay registered.
end note

note bottom of ContainerData
  **One file per container:**
  every container (root too) → <dir>/.udo.toml
  root dir = ~/.config/udo
  `children` stores child **dir paths**, not nested data.
  Tasks are rows in the parent's file (no own file).
  Load errors name the file.
end note

@enduml
